Package: R.cache
================

Version: 0.12.0-9000 [2017-12-25]
 
NEW FEATURES:
 
 o Now package gives a more informative error message in the rare cases it
   fails to create the cache root directory or fails to save a cache file.

 o Updated loadCache() to recognize new file-format version 3 coming to R.

DEPRECATED & DEFUNCT:
 
 o Using onError = "print" for loadCache() is deprecated and replaced by
   new onError = "message".

 
Version: 0.12.0 [2015-11-12]
 
NEW FEATURES:
 
 o Now all prompt and verbose messages are send to the standard error (instead
   of the standard output).
 
 o SPEEDUP: Now memoizedCall() generates cache pathname only once.
 
SOFTWARE QUALITY:
 
 o TESTS: Increased test coverage from 64% to 86%.
 
DEPRECATED & DEFUNCT:
 
 o CLEANUP: Dropped argument 'verbose' from memoizedCall().
 
 
Version: 0.11.1 [2014-09-10]
 
DOCUMENTATION:
 
 o Clarified in help that function calls that returns ("has value") NULL will
   not be cached.
 
SOFTWARE QUALITY:
 
 o TESTS: Added package system tests for memoizeCall() and addMemoization().
 
BUG FIXES:
 
 o addMemoization() will no longer memoize an already memoized function.
 
 
Version: 0.11.0 [2014-09-05]
 
SIGNIFICANT CHANGES:
 
 o Now package imports rather than suggests the 'digest' package.  This
   simplifies installation/usage of the package.
 
 
Version: 0.10.0 [2014-06-10]
 
SOFTWARE QUALITY:
 
 o Bumped package dependencies.
 
 
Version: 0.9.5 [2014-05-01]
 
NEW FEATURES:
 
 o The textual prompt used to ask new R.cache users for approval on creating a
   persistent cache directory is now using the standard error (stderr) rather
   than the standard output (stdout).  This lowers the risk for issues with
   report generators.
 
 
Version: 0.9.4 [2014-04-26]
 
SOFTWARE QUALITY:
 
 o Minimizing the use of '::'.
 
 
Version: 0.9.3 [2014-01-30]
 
SOFTWARE QUALITY:
 
 o Bumped package dependencies.
 
 
Version: 0.9.2 [2014-01-13]
 